src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Allows_Provisional_Bookings__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticking this box allows provisional bookings to be made through the Coursefinder page. (I.e. tick this on public events.)</inlineHelpText>
        <label>Allows Provisional Bookings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Product_Email_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This product requires an email to be sent when bought online to instruct purchaser on accessing the service</description>
        <inlineHelpText>This product requires an email to be sent when bought online to instruct purchaser on accessing the service</inlineHelpText>
        <label>Assessment Product Email Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Post_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>During subscription renewals if the opportunity includes a product with this ticked then the invoice will automatically be posted.</inlineHelpText>
        <label>Auto Post Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Membership_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box causes the Price to be calculated automatically following Membership rules (March 2011)</description>
        <inlineHelpText>Check this box for automatic calculation of Membership Prices</inlineHelpText>
        <label>Automatic Membership Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Charge_Day_1__c</fullName>
        <defaultValue>99</defaultValue>
        <description>Minimum number of days at which Fee 1 will be charged</description>
        <inlineHelpText>Minimum number of days at which Fee 1 will be charged</inlineHelpText>
        <label>Cancellation Charge Day 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Charge_Day_2__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Minimum number of days at which Fee 2 will be charged</description>
        <inlineHelpText>Minimum number of days at which Fee 2 will be charged</inlineHelpText>
        <label>Cancellation Charge Day 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Charge_Day_3__c</fullName>
        <defaultValue>14</defaultValue>
        <description>Minimum number of days at which Fee 3 will be charged</description>
        <inlineHelpText>Minimum number of days at which Fee 3 will be charged</inlineHelpText>
        <label>Cancellation Charge Day 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Charge_Fee_1__c</fullName>
        <defaultValue>0.3</defaultValue>
        <description>Percentage for calculating Cancellation fee (lowest rate)</description>
        <inlineHelpText>Lowest percentage for calculating cancellation fee - will apply if cancellation takes place before Days 1</inlineHelpText>
        <label>Cancellation Charge Fee 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Charge_Fee_2__c</fullName>
        <defaultValue>0.3</defaultValue>
        <description>Percentage for calculating cancellation fee</description>
        <inlineHelpText>Percentage for calculating cancellation fee - will apply if cancellation takes place after Days 1 and before Days 2</inlineHelpText>
        <label>Cancellation Charge Fee 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Charge_Fee_3__c</fullName>
        <defaultValue>0.3</defaultValue>
        <description>Percentage for calculating cancellation fee</description>
        <inlineHelpText>Percentage for calculating cancellation fee - will apply if cancellation takes place after Days 2 and before Days 3</inlineHelpText>
        <label>Cancellation Charge Fee 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Charge_Fee_Final__c</fullName>
        <defaultValue>1.0</defaultValue>
        <description>Percentage for calculating cancellation fee</description>
        <inlineHelpText>Percentage for calculating cancellation fee - will apply if cancellation takes place after Days 3</inlineHelpText>
        <label>Cancellation Charge Fee Final</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to Cancellation Fee product used when this product is cancelled.  This product is added to the cancellation Fee opportunity created during the cancellation process</description>
        <inlineHelpText>Links to Cancellation Fee product used when this product is cancelled.</inlineHelpText>
        <label>Cancellation Fee Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>CancellationFeeProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificate_Course_Name__c</fullName>
        <inlineHelpText>Enter Name to be printed on external certificates</inlineHelpText>
        <label>Certificate Course Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Performance_Recognition__c</fullName>
        <description>Denotes the process stage which decides if the transaction should be included when deciding commission percentage</description>
        <inlineHelpText>Denotes the process stage which decides if the transaction should be included when deciding commission percentage</inlineHelpText>
        <label>Commission Performance Recognition</label>
        <picklist>
            <picklistValues>
                <fullName>Event Delivered In Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Delivered Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Target_Scheme__c</fullName>
        <description>Defines which commission target scheme the product belongs to which in dictates commission reporting structure</description>
        <inlineHelpText>Defines which commission target scheme the product belongs to which in dictates commission reporting structure</inlineHelpText>
        <label>Commission Target Scheme</label>
        <picklist>
            <picklistValues>
                <fullName>Target 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complywise_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if the product is classed as &quot;Enterprise&quot; or the old &quot;Complywise&quot; product</description>
        <inlineHelpText>Tick if the product is classed as &quot;Enterprise&quot; or the old &quot;Complywise&quot; product</inlineHelpText>
        <label>Complywise Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <defaultValue>0.6</defaultValue>
        <description>Desired Contribution level for Events of this product</description>
        <inlineHelpText>Desired Contribution level for Events of this product</inlineHelpText>
        <label>Contribution</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Core_Subscription_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to determine which products should be displayed in the drop down lists on the online booking forms. If checked they won&apos;t be selected. You MUST update all subscription lines using this product to refresh data if this field is changed.</inlineHelpText>
        <label>Core Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Code_Part_1__c</fullName>
        <description>This is used for 1st part of the Cost code for Purchase order Line Item</description>
        <inlineHelpText>This is used for 1st part of the Cost code for Purchase order Line Item</inlineHelpText>
        <label>Cost Code Part 1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Code_Part_3__c</fullName>
        <description>This is used for 3rd part of the Cost code for Purchase order Line Item</description>
        <inlineHelpText>This is used for 3rd part of the Cost code for Purchase order Line Item</inlineHelpText>
        <label>Cost Code Part 3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_notes_cost__c</fullName>
        <label>Course Notes Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Provisional_Date_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <description>Number of days a customer has to confirm an event</description>
        <inlineHelpText>Number of days a customer has to confirm an event</inlineHelpText>
        <label>Customer Provisional Date Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delegate_Pack_Cost__c</fullName>
        <label>Delegate Pack Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dimension_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Permitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Affects discount workflow</description>
        <inlineHelpText>Tick this box if discounts are permitted</inlineHelpText>
        <label>Discount Permitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Years__c</fullName>
        <description>add the corresponding number of years depending on the duration field</description>
        <formula>IF (TEXT(Duration__c) = &quot;1 Year&quot;,1,
(IF (TEXT(Duration__c) = &quot;2 Years&quot;,2,
(IF (TEXT(Duration__c) = &quot;3 Years&quot;,3,
(IF (TEXT(Duration__c) = &quot;100 Years&quot;,100,
0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>add the corresponding number of years depending on the duration field</inlineHelpText>
        <label>Duration (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Used for subscription products only determine the length of the subscription.</description>
        <inlineHelpText>Used for subscription products only determine the length of the subscription.</inlineHelpText>
        <label>Duration</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E_Delivery_Audit_Plus_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is ticked, the sales price is ticked on the opportunity</description>
        <inlineHelpText>Check if the Product is Infrastructure (Audit Plus) (populates price via workflow)</inlineHelpText>
        <label>E-Delivery Infrastructure Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Delivery_DMS_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>These products will be counted and fed into supplementary DMS Products</description>
        <inlineHelpText>Check if this is a DMS Product (triggers DMS Price setting on derived products)</inlineHelpText>
        <label>E-Delivery DMS Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Delivery_DMS_Supplementary_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>These products will have a price set by the number of DMS Licenses</description>
        <inlineHelpText>Check if price should be determined by DMS Product count</inlineHelpText>
        <label>E-Delivery (DMS) Supplementary Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Delivery_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Product is an E-Delivery Subscription Product (reflects on the Subscription and Renewal Opportunity)</description>
        <inlineHelpText>Indicates if the Product is an E-Delivery Subscription Product</inlineHelpText>
        <label>E-Delivery (Subscription)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Delivery_T_Supplementary_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Price will be determined (via workflow) by number of E-Delivery Licenses</description>
        <inlineHelpText>Check if price should be determined by E-Delivery Training Product count</inlineHelpText>
        <label>E-Delivery (T) Supplementary Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Delivery_Training_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if E-Delivery pricing algorithm applies</inlineHelpText>
        <label>Apply E-Learning Pricing Algorithm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Record_Type__c</fullName>
        <label>Event Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Public Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guides_Publication_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this products is a Guides Publication product this should be ticked. If you tick this field after the product has been used on a Subscription Line you MUST update all subscription lines using this product to refresh the data.</inlineHelpText>
        <label>Guides Publication Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSWA_Publication_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this products is a HSWA Publication product this should be ticked. If you tick this field after the product has been used on a Subscription Line you MUST update all subscription lines using this product to refresh the data.</inlineHelpText>
        <label>HSWA Publication Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Company_Day_Rate_Applies__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if a standard day rate applies and a Sales Manager price is not necessary, i.e. for Audit / Advisory products</inlineHelpText>
        <label>In-Company: Day Rate Applies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_Membership_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this products is a information membership product this should be ticked. If you tick this field after the product has been used on a Subscription Line you MUST update all subscription lines using this product to refresh the data.</inlineHelpText>
        <label>Info Membership Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Reminder_Days__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Number of days before expiry that an initial reminder should be generated</description>
        <inlineHelpText>How many days before expiry should an initial reminder be generated?</inlineHelpText>
        <label>Initial Reminder Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This product is sold to international clients only</description>
        <inlineHelpText>This product is sold to international clients only</inlineHelpText>
        <label>International Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Membership_Product_for_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Membership Product for Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Subscription_Product_for_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Subscription Product for Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOOP_Booking_Confirmation_Short_Name__c</fullName>
        <formula>CASE(Loop_Booking_Confirmation_Template__c,
&quot;Booking Confirmation ISR&quot;, &quot;ISR&quot;,
&quot;Booking Confirmation Template Advisory&quot;, &quot;TAD&quot;,
&quot;Booking Confirmation Template Audit&quot;, &quot;TAU&quot;, 
&quot;Booking Confirmation Template In Company Training&quot;, &quot;ICT&quot;, 
&quot;Booking Confirmation Template In Company Training LRA&quot;, &quot;ICTLRA&quot;, 
&quot;Booking Confirmation Template JOMC&quot;, &quot;JOMC&quot;,
&quot;Booking Confirmation Template Public&quot;, &quot;PUB&quot;,
&quot;Booking Confirmation Template Public - LRA&quot;, &quot;PUBLRA&quot;,
&quot;Booking Confirmation Template International Public - LRA&quot;, &quot;INTPBLRA&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOOP Booking Confirmation Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP_Learner_Resource_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this product has a Learner Resource Area on the website, this filed informs the DDP templates (booking confirmation) to include LRA</description>
        <inlineHelpText>Tick this box if this product has a website Learner Resource areas associated with it</inlineHelpText>
        <label>LOOP Learner Resource Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lapse_Days__c</fullName>
        <defaultValue>14</defaultValue>
        <description>Number of days after expiry that subscription should lapse</description>
        <inlineHelpText>How many days after expiry should a subscription lapse?</inlineHelpText>
        <label>Lapse Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>The length of a Product in Days where that product has a duration</description>
        <inlineHelpText>Default Length in Days</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Text__c</fullName>
        <label>Letter Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Band_1_Amount__c</fullName>
        <description>NOTE this is a quantity, that is multiplied by the sales price (to cover for multiple currencies)</description>
        <inlineHelpText>Amount charged for the smallest License Band (later multiplied by Sales Price, hence number not currency).</inlineHelpText>
        <label>License Band 1 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Band_1_Upper_Limit__c</fullName>
        <inlineHelpText>Upper limit to the smallest license band (E-Delivery Training and DMS)</inlineHelpText>
        <label>License Band 1 Upper Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Band_2_Amount__c</fullName>
        <description>NOTE this is a quantity, that is multiplied by the sales price (to cover for multiple currencies)</description>
        <inlineHelpText>Amount charged for the second License Band (later multiplied by Sales Price, hence number not currency).</inlineHelpText>
        <label>License Band 2 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Band_2_Upper_Limit__c</fullName>
        <inlineHelpText>Upper limit to the second license band (E-Delivery Training and DMS)</inlineHelpText>
        <label>License Band 2 Upper Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Band_3_Amount__c</fullName>
        <description>NOTE this is a quantity, that is multiplied by the sales price (to cover for multiple currencies)</description>
        <inlineHelpText>Amount charged for the third License Band (later multiplied by Sales Price, hence number not currency).</inlineHelpText>
        <label>License Band 3 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Band_3_Upper_Limit__c</fullName>
        <inlineHelpText>Upper limit to the third license band (E-Delivery Training and DMS)</inlineHelpText>
        <label>License Band 3 Upper Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Band_Final_Amount__c</fullName>
        <description>NOTE this is a quantity, that is multiplied by the sales price (to cover for multiple currencies)</description>
        <inlineHelpText>Amount charged for the largest License Band (later multiplied by Sales Price, hence number not quantity)</inlineHelpText>
        <label>License Band Final Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop_Booking_Confirmation_Template__c</fullName>
        <description>Enter description</description>
        <inlineHelpText>Enter descriptionLoop Booking Confirmation Template</inlineHelpText>
        <label>LOOP Booking Confirmation Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Attendees__c</fullName>
        <description>Specifies the maximum allowed nummber of attendees where a product is a training or other type of course or the maximum number of sites (quantity) for the subscription product</description>
        <inlineHelpText>Specifies the maximum allowed nummber of attendees where a product is a training or other type of course or the maximum number of sites (quantity) for the subscription product</inlineHelpText>
        <label>Maximum Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Discount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Applies if discount permitted = true</description>
        <inlineHelpText>Enter the maximum discount that may be offered before the opportunity requires approval. (If discount is permitted)</inlineHelpText>
        <label>Maximum Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the product is a Membership (affects Trader vs Member distinction on Account)</inlineHelpText>
        <label>Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Attendees__c</fullName>
        <description>Specifies the minimum required number of attendees where a product is a training or other type of course or the minimum number of sites (quantity) for the subscription product</description>
        <inlineHelpText>Specifies the minimum required number of attendees where a product is a training or other type of course or the minimum number of sites (quantity) for the subscription product</inlineHelpText>
        <label>Minimum Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Moodle_Course_Code__c</fullName>
        <description>Stores course code for Moodle E-Learning platform, this drives enrollment on appropriate course</description>
        <label>Moodle Course Code</label>
        <picklist>
            <picklistValues>
                <fullName>NVQ_3_2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ_5_2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ_4_2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N_Dip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEBOSH_NCC_SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEBOSH_FSRM_SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGC_SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOSHMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int_Dip_SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC_Int_Dip_U1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC_Int_Dip_U2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC_Int_Dip_U3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6_BSC_Dip_SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6_BSC_Dip_U1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6_BSC_Dip_U2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6_BSC_Dip_U3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Site_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if this product is a Multi-Site subscription product</description>
        <inlineHelpText>Check if this product is a Multi-Site subscription product</inlineHelpText>
        <label>Multi-Site Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a product has no timed event this should be true, in order to pull the products through on the booking form.</description>
        <label>No Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_PROD_ID__c</fullName>
        <description>This is the Primary Key of the Product from the source Product data and maps to Product.PROD_ID from the Product table in the CB database.</description>
        <externalId>true</externalId>
        <label>PK_CB_PROD_ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <controllingField>Family</controllingField>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC Safety Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Management System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entry Level Quals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H&amp;S Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H&amp;S Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety at Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 Quals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 Quals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3 Quals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6 Quals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ (Level 3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ (Level 4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCP Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup and Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>